# document

./: .gitignore  .gitmodules  README
asm/: boot.nasm  boot.out  makefile
bootstrap/la/: index.html
c/: CMakeLists.txt  apue.h  asm.S  c.c  header.h  hello.c  openmp.c
c/basic/: a.out  printarr.c
c/basic/file/: a.out  rmfile.c
c/basic/helloworld/: a.out  main.c
c/basic/pointers/: a.out  main.c
c/basic/test/: a.out  file_io.c  file_stat.c  openmp.c  point.c  test  yizi.c
cpp/: class.cpp
cpp/Hello/: Hello.cpp  a.out
css/: color.css
django-docs-3.1-zh-hans/: .buildinfo  contents.html  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
django-docs-3.1-zh-hans/_modules/: django.html  index.html
django-docs-3.1-zh-hans/_static/: documentation_options.js
django-docs-3.1-zh-hans/faq/: admin.html  contributing.html  general.html  help.html  index.html  install.html  models.html  usage.html  (+1 more)
document-library-master/: README.md
js/: angular.html  b.html  bootstrap.html  copytext.js  function.js  html.html  html2.html  html5.html  javascript.js  jquery.html  jquery.js  js.js  node.js  nodejs.js  php.php  style.css  test.js  vue.html  vue.vue  xml.xml
linux/: soft.sh
lisp/: eww-bookmark.el  lisp.el  抓取网页.el
node-abc-master/: README.md
php/: php.php
python/: binggan.py  elephant.py  hello.py  hello1.py  import.py  learn.py  note.py  pymodule.py  python.py  redis.py  turtle-.py  xpath.py
rb/: hello.rb
scratch/: cat.sb3
sh/: foursh.sh
shell/: circle.sh  climate.sh  shell.sh  while.sh
(+684 files in other folders)
